[gd_scene load_steps=11 format=2]

[ext_resource path="res://AudioRelated/GUIRelated/AudioSettingsPanel/Assets/ButtonToAudioSettingsPanel/ButtonToAudioSettingsPanel_Highlighted.png" type="Texture" id=1]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RightSideBackground.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundStatusPanel.gd" type="Script" id=3]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundSpeedAndStartPanel/RoundSpeedAndStartPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameHUDRelated/AbilityPanel/AbilityPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/UserControls/MenuButton.png" type="Texture" id=6]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/UserControls/MenuButton_Highlighted.png" type="Texture" id=7]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/MainPanel/RoundInfoPanel_V2.tscn" type="PackedScene" id=9]
[ext_resource path="res://AudioRelated/GUIRelated/AudioSettingsPanel/Assets/ButtonToAudioSettingsPanel/ButtonToAudioSettingsPanel_Normal.png" type="Texture" id=10]

[node name="RoundStatusPanel" type="MarginContainer"]
margin_right = 120.0
margin_bottom = 440.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 120.0
margin_bottom = 440.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 120.0
margin_bottom = 440.0
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 120.0
margin_bottom = 21.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
margin_left = 76.0
margin_top = 2.0
margin_right = 118.0
margin_bottom = 21.0
size_flags_horizontal = 10

[node name="AudioSettingsButton" type="TextureButton" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
margin_right = 19.0
margin_bottom = 19.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 1 )

[node name="MainMenuButton" parent="VBoxContainer/MarginContainer2/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 23.0
margin_right = 42.0
margin_bottom = 19.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="RoundInfoPanel_V2" parent="VBoxContainer" instance=ExtResource( 9 )]
margin_top = 25.0
margin_right = 120.0
margin_bottom = 115.0
size_flags_vertical = 2
custom_constants/margin_right = 1
custom_constants/margin_left = 1

[node name="AbilityPanel" parent="VBoxContainer" instance=ExtResource( 5 )]
margin_left = 20.0
margin_top = 131.0
margin_right = 100.0
margin_bottom = 440.0
rect_min_size = Vector2( 80, 0 )
size_flags_stretch_ratio = 3.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="RoundSpeedAndStartPanel" parent="." instance=ExtResource( 4 )]
margin_left = 3.0
margin_top = 360.0
margin_right = 117.0
margin_bottom = 440.0
size_flags_horizontal = 6
size_flags_vertical = 10

[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/AudioSettingsButton" to="." method="_on_AudioSettingsButton_pressed"]
[connection signal="released_mouse_event" from="VBoxContainer/MarginContainer2/HBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_released_mouse_event"]
